{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 29,
  "lineage": "847c8082-f77d-2574-179c-13b9d548de65",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_elb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:699017351553:loadbalancer/webservers-stage",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b",
              "eu-west-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "webservers-stage-1553076579.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webservers-stage",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webservers-stage",
            "security_groups": [
              "sg-05c38dd678298331d"
            ],
            "source_security_group": "699017351553/webservers-stage-elb",
            "source_security_group_id": "sg-05c38dd678298331d",
            "subnets": [
              "subnet-1c161c54",
              "subnet-985c18c2",
              "subnet-d08bb0b6"
            ],
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.elb",
            "module.webserver_cluster.data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:699017351553:security-group/sg-05c38dd678298331d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c38dd678298331d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers-stage-elb",
            "name_prefix": "",
            "owner_id": "699017351553",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-1489406d"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:699017351553:security-group/sg-0a8e820ec22bb8581",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a8e820ec22bb8581",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webservers-stage-instance",
            "name_prefix": "",
            "owner_id": "699017351553",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-1489406d"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}